--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tomato",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://github.com/ysfscream/react-electron-typescript-boilerplate",
   "main": "public/electron.ts",
   "dependencies": {
     "devtron": "^1.4.0",
-    "electron-debug": "^2.0.0",
+    "electron-debug": "^2.2.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
     "@types/jest": "24.0.18",
@@ -26,8 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "yarn react-build && electron-builder --publish=always",
-    "build": "yarn react-build && yarn electron-build",
+    "release": "yarn react-build \"electron-builder --publish=always\"",
+    "build": "yarn react-build \"yarn electron-build\"",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
